--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "rootDir": "src",
+    "baseUrl": "./"
   },
   "include": [
-    "src"
+    "src/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "*.spec.ts",
+    "**/*.test.tsx",
+    "*.test.ts"
   ]
 }
