--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -52,7 +54,9 @@
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-logger": "^3.0.8",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1"
