--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-logger": "^3.0.8",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1"
